src/css/landing.css
@font-face {
  font-family: "Avenir";
  src: url(../fonts/Avenir/AvenirRegular.ttf) format("truetype");
}
@font-face {
  font-family: "Whiteflower";
  src: url(../fonts/WhiteFlower/WhiteFlower.otf) format("opentype");
}
@font-face {
  font-family: "Magenta";
  src: url(../fonts/magenta-2/MagentaDemo.ttf) format("truetype");
}
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

header {
  position: sticky;
  position: -webkit-sticky;
  top: 0px;
  background-color: #f8f6f4;
}
header nav .navbar {
  padding: 1rem;
  transition: padding 1.5s ease;
  list-style: none;
  display: flex;
  justify-content: space-between;
  align-items: center;
}
header nav .navbar li {
  width: 100%;
  text-align: center;
}
header nav .navbar li a {
  text-decoration: none;
  padding: 0 1rem;
}
header nav .navbar li a p {
  font-family: "Baskervville", serif;
  font-weight: 400;
  font-style: normal;
}
header nav .navbar li a p:not(.classes) {
  border-right: 1px #725a58 solid;
}
header nav .navbar li a p,
header nav .navbar li a i {
  font-size: 20px;
  color: #725a58;
}
header nav .logo img {
  width: 100%;
  transition: width 1.5s ease;
}

.sidebar {
  position: fixed;
  top: 0;
  right: 0;
  height: 100vh;
  width: 250px;
  z-index: 999;
  background-color: #f8f6f4;
  display: none;
  transition: display 2s ease-in-out;
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-start;
  list-style: none;
}
.sidebar li {
  width: 100%;
}
.sidebar li:hover {
  background-color: #e3b6b1;
  transition: background-color 0.5s ease;
}
.sidebar li a {
  text-decoration: none;
  padding: 0 1rem;
  width: 100%;
}
.sidebar li a p {
  font-family: "Baskervville", serif;
  font-weight: 400;
  font-style: normal;
}
.sidebar li a p,
.sidebar li a i {
  font-size: 20px;
  color: #725a58;
}

.smallNavBar {
  padding: 0.5rem 1rem;
  transition: padding 1.5s ease;
}
.smallNavBar .logo img {
  width: 40%;
  transition: width 1.5s ease;
}

.showonMobile,
.opentagSB {
  display: none;
}

.mainPicSection .mainPicContainer {
  display: flex;
  justify-content: center;
  width: 100%;
  height: 70vh;
  background-color: #f8f6f4;
  position: relative;
}
.mainPicSection .mainPicContainer #MainPic {
  position: absolute;
  max-height: 100%;
}
.mainPicSection .mainPicContainer #mainSentenceContainer {
  position: absolute;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  text-align: center;
  align-items: center;
  top: 50%;
}
.mainPicSection .mainPicContainer #mainSentenceContainer h1 {
  font-family: "Magenta";
  font-weight: 400;
  font-style: normal;
  font-size: 80px;
  color: #f8f6f4;
}
.mainPicSection .mainPicContainer #mainSentenceContainer p {
  font-family: "Avenir", serif;
  font-weight: 300;
  font-style: normal;
  font-size: 18px;
  color: #f8f6f4;
  margin-top: 1rem;
}
.mainPicSection .mainPicContainer #mainSentenceContainer button {
  padding: 20px 20px;
  width: 230px;
  background-color: transparent;
  border: 0.5px solid rgba(255, 255, 255, 0.5);
  cursor: pointer;
  color: #f8f6f4;
  font-family: "Baskervville", serif;
  font-size: 20px;
  margin-top: 1.5rem;
}
.mainPicSection .mainPicContainer #mainSentenceContainer button:hover {
  background-color: rgba(255, 255, 255, 0.5);
  border: 1px solid rgba(255, 255, 255, 0.5);
  color: #191919;
  transition: 1s;
}

.starSection {
  padding: 2rem 0;
  background-color: #fae9e7;
}
.starSection .headerSec {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.starSection .headerSec .titleStar {
  padding: 1rem;
}
.starSection .headerSec .titleStar h1 {
  font-family: "Baskervville", serif;
  font-weight: 400;
  font-style: normal;
  font-size: 80px;
  color: #5e4a49;
}
.starSection .headerSec span {
  border: 1px #e3b6b1 solid;
  width: 200px;
  margin-bottom: 1.5rem;
}
.starSection .headerSec .messageStar {
  width: 40%;
  text-align: center;
  margin: 1rem 0;
}
.starSection .headerSec .messageStar p {
  font-family: "Avenir", serif;
  font-weight: 300;
  font-style: normal;
  font-size: 18px;
  color: #191919;
}
.starSection .headerSec .starsecBtn {
  margin: 1rem 0;
}
.starSection .headerSec .starsecBtn .btnStar {
  padding: 1rem 2rem;
  background-color: transparent;
  border: 0.5px solid #5e4a49;
  cursor: pointer;
}
.starSection .headerSec .starsecBtn .btnStar p {
  font-family: "Baskervville", serif;
  font-weight: 400;
  font-style: normal;
  font-size: 20px;
}
.starSection .headerSec .starsecBtn .btnStar:hover {
  background-color: #b99692;
  border: 1px solid #b99692;
  color: white;
}
.starSection .photoSec {
  display: flex;
  width: 100%;
  gap: 10px;
  height: 400px;
  margin: 4rem 0;
}
.starSection .photoSec .photo {
  width: 25%;
  height: 100%;
}
.starSection .photoSec .photo.firstpic {
  background-image: url(../resources/landing/1.png);
  background-size: cover;
  background-repeat: no-repeat;
}
.starSection .photoSec .photo.secondpic {
  background-image: url(../resources/landing/2.png);
  background-size: cover;
  background-repeat: no-repeat;
}
.starSection .photoSec .photo.thirdpic {
  background-image: url(../resources/landing/3.png);
  background-size: cover;
  background-repeat: no-repeat;
}
.starSection .photoSec .photo.fourthpic {
  background-image: url(../resources/landing/4.png);
  background-size: cover;
  background-repeat: no-repeat;
}
.starSection .testimonials {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 2rem 0;
}
.starSection .testimonials .icon {
  padding: 1rem;
}
.starSection .testimonials .singleTest {
  width: 57%;
  text-align: center;
  padding: 1rem 0;
}
.starSection .testimonials .singleTest p {
  font-family: "Baskervville", serif;
  font-weight: 400;
  font-style: normal;
  font-size: 32px;
}
.starSection .testimonials .testName {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1rem 0;
  width: 350px;
}
.starSection .testimonials .testName .name p {
  font-family: "Magenta";
  font-size: 54px;
}
/* ... */

